--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.2",
     "tailwindcss": "^3.2.4",
     "three": "^0.148.0",
     "web-vitals": "^2.1.4"
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
